<resources>
    <string name="app_name">Vinilos Grupo 26</string>
    <!-- Strings used for fragments for navigation -->
    <string name="collector_name_placeholder">Nombre del coleccionista</string>
    <string name="collector_email_placeholder">Correo del coleccionista</string>
    <string name="collector_phone_placeholder">Número telefónico</string>
    <string name="comment_rating_placeholder">##</string>
    <string name="comment_description_placeholder">Descripción del comentario</string>
    <string name="album_name_placeholder">Nombre del album</string>
    <string name="album_description_placeholder">Descripcion del album</string>
    <string name="album_cover">Caratula del album</string>
    <string name="image_artista">Imagen artista</string>
    <string name="name_artist">Nombre artista</string>
    <string name="album_release_date">Fecha de lanzamiento</string>
    <string name="album_genre">Género</string>
    <string name="album_record_label">Disquera</string>
    <string name="album_description">Descripción</string>
    <string name="album_there_no_albums">No hay álbumes disponibles</string>
    <string name="album_add_album">Agregar album</string>
    <string name="album_add_comentario">Agregar comentario</string>
    <string name="album_added_album_success">Se guardo el album exitosamente</string>
    <string name="list_albums">Listado de álbumes</string>
    <string name="album_share">Compartir álbum</string>
    <string name="album_dropdown">Selecciona un álbum</string>
    <string name="loading_tracks">Cargando canciones...</string>
    <string name="no_tracks_available">No hay canciones disponibles en este álbum.</string>
    <string name="txt_no_comments">No hay comentarios para este álbum</string>
    <string name="comentario_added_album_success">Se guardo el comentario exitosamente</string>
    <string name="title_albums">Albums</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_comments">Comentarios del álbum</string>
    <string name="comments">Comentarios</string>
    <string name="songs">Canciones</string>
    <string name="releaseDate">Fecha de lanzamiento: </string>
    <string name="createDate">Fecha de creación banda: </string>
    <string name="birthDate">Fecha de nacimiento: </string>
    <string name="recordLabel">Sello discográfico: </string>
    <string name="title_menu">Menu Principal</string>
    <string name="collector">Coleccionista: </string>
    <string name="visitor">Visitante</string>
    <string name="welcome">Bienvenido\n</string>
    <string name="albums">Álbumes</string>
    <string name="album">Álbum</string>
    <string name="album_detail">Detalle Álbum</string>
    <string name="artists">Artistas</string>
    <string name="artists_detail">Detalle Artistas</string>
    <string name="artist_image">Imagen</string>
    <string name="artist_name">Nombre del Artista</string>
    <string name="artist_there_no_artists">No hay artistas disponibles</string>
    <string name="collectors">Coleccionistas</string>
    <string name="main_menu">Menu Principal</string>
    <string name="action_save">Guardar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_accept">Aceptar</string>
    <string name="create_album">Nuevo Álbum</string>
    <string name="track_add_track">Agregar canción</string>
    <string name="track">Canción</string>
    <string name="album_there_no_tracks">No hay canciones disponibles</string>
    <string name="album_there_no_comentary">No hay comentarios disponibles</string>
    <string name="track_name_placeholder">Nombre de la canción</string>
    <string name="track_duration_placeholder">Duración de la canción</string>
    <string name="track_added_success">Se guardo el track exitosamente</string>
    <string name="user">Usuario: </string>
    <string name="raiting">Raiting</string>
    <string name="icon_album">Icono Álbum</string>
    <string name="icon_artist">Icono Artista</string>
    <string name="icon_arrow">Icono Flecha</string>
    <string name="icon_visitor">Icono Visitante</string>
    <string name="icon_collector">Icono Coleccionista</string>
    <string-array name="collectors">
        <item></item>
        <item>Manolo Bellon</item>
        <item>Jaime Monsalve</item>
        <item>Collector 1</item>
        <item>Jhon Doe</item>
        <item>Sebastian Saenz</item>
        <item>Kevin Malone</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>